--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -409,8 +409,6 @@ The main \textbf{contributions} of this paper are:
 \section{A Vocabulary to Describe RDF Constraints Generically} 
 \label{sec:vocabulary}
 
-\er{A constraint that says book should have a single author in OWA, does not mean that it has a unique author. In every model  (an interpretation that makes a set of DL knowledge base true), it can be the case that a book has a single author, however, bringing all those together, this author is not unique. In some models it is Ali, in others its Veli. And since in every model there is only one, DL sentences are satisfied. But this does not correspond to the intended constraint which is usual in CWA way.} 
-
 In order to develop a vocabulary to describe constraints of any constraint type in a generic way, what we need to do is to specify the vocabulary's underlying semantics and to define the basic terminology for the formulation of constraints.
 
 \subsection{Semantics for RDF Validation}
@@ -422,7 +420,7 @@ A data property is \emph{functional} (\emph{R-65}) if for each individual \emph{
 When assuming \emph{UNA}, the functional property {\em title} (\ms{funct (title)}) causes a clash
 in case the book {\em Huckleberry-Finn} has more than one \emph{title}
 (\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}, \ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}).
-Assuming nUNA, however, reasoning concludes that the titles {\em The-Adventures-of-Huckleberry-Finn} and {\em Die-Abenteuer-des-Huckleberry-Finn} are the same (\ms{\{The-Adventures-of-Huckleberry-Finn\}} = \ms{\{Die-Abenteuer-des-Huckle} \ms{berry-}\ms{Finn\}}).  
+Assuming nUNA, however, reasoning concludes that the titles {\em The-Adventures-of-Huckleberry-Finn} and {\em Die-Abenteuer-des-Huckleberry-Finn} are the same (\ms{\{The-Adventures-of-Huckleberry-Finn\}} = \ms{\{Die-Abenteuer-des-Huckle} \ms{berry-}\ms{Finn\}}).
 
 Reasoning in \emph{OWL 2} is based on the {\em open-world assumption (OWA)}, i.e., a statement cannot be inferred to be false if it cannot be proved to be true. 
 %which fits its primary design purpose to represent knowledge on the World Wide Web. 
@@ -433,11 +431,31 @@ Reasoning in \emph{OWL 2} is based on the {\em open-world assumption (OWA)}, i.e
 As each \emph{book} must have a \emph{title} (\ms{Book $\sqsubseteq \exists$ title.$\top$}) and {\em Hamlet} is a \emph{book} (\ms{Book(Hamlet)}),
 {\em Hamlet} must have at least one \emph{title}.
 In an \emph{OWA} setting, this axiom does not cause a constraint violation (even if there is no explicitly defined \emph{title}), since there must be a \emph{title} for this \emph{book} which we may not know. 
-On the other hand, RDF validation scenarios require the {\em closed-world assumption (CWA)}, i.e., a statement is inferred to be false if it cannot be proved to be true. Classical constraint languages are based on the \emph{CWA} where constraints need to be satisfied only by named individuals which yields a constraint violation.
+On the other hand, RDF validation scenarios require the {\em closed-world assumption (CWA)}, i.e., a statement is inferred to be false if it cannot be proved to be true.
+When assuming the \emph{CWA}, a constraint violation is raised as there is no explicitly defined title. 
+A constraint that says that a book must have at least one title in \emph{OWA}, 
+does not mean that the title has to be unique. 
+In every model  (an interpretation that makes a set of \emph{DL knowledge base} true), 
+it can be the case that a book has a single title, however, 
+this title is not unique. 
+In some models it is \emph{The-Adventures-of-Huckleberry-Finn}, in others it is \emph{Die-Abenteuer-des-Huckleberry-Finn}. 
+And since in every model there is only one, \emph{DL} sentences are satisfied. 
+But this does not correspond to the intended constraint which is usual in \emph{CWA} way.   
+%Classical constraint languages are based on the \emph{CWA} where constraints need to be satisfied only by named individuals which yields a constraint violation.
 This ambiguity in semantics is one of the main reasons why \emph{OWL 2} has not been adopted as a standard constraint language for RDF validation in the past.  
 %In case we want to use \emph{OWL 2} as a constraint language, we adopt the same semantics (CWA) that is for RDF validation in general. 
 %\tb{feedback from Erman: the major problem is semantics. OWL basically work in different semantics than others. And their semantics are formal. Closed world vs. Open World is also a part of this. / Thomas: I think your issue is tackled now? No.}
 \er{If a constraint is represented (recognized) by two different languages, that means, whenever it is violated in one language it is violated in other. We have to provide formal generic semantics for it; formally prove those statements.}
+
+%Erman:
+%Section 3.1, explains a possible application only in an example specific to UNA and nUNA case, and I also have the 
+%feeling that it is so spread out to the whole work (paper1  especially), and in the core of technical parts. That is, whenever we mean CWA vs. OWA, we turn our head to UNA vs. nUNA.
+%
+%The thing I wanted to point out is that, the difference in CWA and OWA and its consequence/incompatibility is more general (as you also may probably noticed)  than the use of "UNA vs. nUNA".   The example I gave  is independent from the assumption of UNA  or nUNA. 
+%
+%You don't need to change something asap, but I think we can improve the exposition of any paper, by giving a classical constraint, how it is done classical in CWA, and how it is done in OWA, and then introducing the extra benefit, redundancy for instance.
+%
+%A constraint that says book should have a single author in OWA, does not mean that it has a unique author. In every model  (an interpretation that makes a set of DL knowledge base true), it can be the case that a book has a single author, however, bringing all those together, this author is not unique. In some models it is Ali, in others its Veli. And since in every model there is only one, DL sentences are satisfied. But this does not correspond to the intended constraint which is usual in CWA way.
 
 \subsection{Basic Terminology for the Formulation of RDF Constraints}
 
