--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -912,42 +912,82 @@ This technical report also contains mappings to DL to logically underpin each re
 The subsequent steps are needed to get an idea about the performance (i.e. computational complexity) to validate simple (atomic) and complex (composed) constraint types:
 \begin{enumerate}
 	\item As reasoning may be performed as a pre-validation step, we determine for each constraint type if it makes sense to perform reasoning prior to validation.
-	\item When combining reasoning and validation, the distinction between the CWA with UNA (CWA/UNA ) or the OWA without UNA (OWA/nUNA)  is an important aspect. Thus, we evaluate each constraint type regarding the CWA/UNA dependency.
+	\item When combining reasoning and validation, the distinction between the CWA with UNA (CWA/UNA ) or the OWA without nUNA (OWA/nUNA)  is an important aspect. Thus, we evaluate each constraint type regarding the CWA/UNA dependency.\tb{ToDo}
 	\item  Since reasoning makes difference  for some validation types, we note them with the computational complexity  of  the language that they are expressed in.
 	\item Since the combination of DL constructs of a constraint type determines its complexity, by mapping to DL we get an idea of the complexity for each constraint type in worst case.
 \end{enumerate}
 
-\subsection{Dependency on CWA with UNA}
+\subsection{Dependency on CWA and Dependency on UNA}
 
-reviews:
-\begin{itemize}
-	\item @Reviewer 1, 3, 4: We consider the tied case in OWA, as this distinction (UNA/nUNA) is common in OWA. Although there are constructs to express that two names are the same or not, UNA is assumed for OWL 2 semantics in general. Validation has its origin in the XML world and therefore classically CWA/UNA is assumed and tied together. When assuming OWA/nUNA for RDF validation, we won’t get the intended validation results as validation won’t be that restrictive.
-	\item from 3. reviewer:
-2. It seemed the authors did not notice that, while DLs/OWL do not assume the unique name assumption (UNA), they have constructs to express when two names are the same or not. As a result, I am less sure if the classification in Section 3 makes sense any longer.
+%reviews:
+%\begin{itemize}
+	%\item @Reviewer 1, 3, 4: We consider the tied case in OWA, as this distinction (UNA/nUNA) is common in OWA. Although there are constructs to express that two names are the same or not, UNA is assumed for OWL 2 semantics in general. Validation has its origin in the XML world and therefore classically CWA/UNA is assumed and tied together. When assuming OWA/nUNA for RDF validation, we won’t get the intended validation results as validation won’t be that restrictive.
+	%\item from 3. reviewer:
+%2. It seemed the authors did not notice that, 
+%  \item from 4. reviewer:
+%Why is CWA tied to UNA, and OWA to nUNA, other than convention?
+%\end{itemize}
 
-  \item from 4. reviewer:
-Why is CWA tied to UNA, and OWA to nUNA, other than convention?
-\end{itemize}
+The distinction of constraint types regarding the dependency on the CWA and on the UNA is an important aspect when combining reasoning with validation.
+As many OWL 2 axioms correspond to constraint types we want to use for validation, 
+we have to know their behavior in terms of validation results in different semantic settings. 
+OWL 2 reasoning requires the OWA with the nUNA  whereas RDF validation has its origin in the XML world and is therefore classically based on the CWA and the UNA.
+When assuming OWA and nUNA for RDF validation, validation won’t be that restrictive and we won’t get the intended validation results.
+While DLs/OWL do not assume UNA, they have constructs to express when two names are the same or not.
+%We classify constraint types according to the dependency on the CWA with UNA; (1) $\mathcal{C}_{CWA}$ which is  the set of constraint types dependent on the CWA with UNA,  and (2) $\overline{\mathcal{C}_{CWA}}$, its complement (set of constraint types independent on the CWA with UNA).  
+%Therefore, $\mathcal{C}_{CWA}$ includes constraint types for which it makes a difference if the CWA/UNA or the OWA/nUNA is assumed.
+%If something is a \emph{publication}, e.g., it has at least one \emph{author} (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}).
+%This {\em qualified cardinality restriction} depends on the CWA/UNA.
+%In a CWA/UNA setting, a \emph{publication} without an explicitly stated author violates this constraint.  
+%With OWA/nUNA semantics, however,
+%the \emph{publication} without an explicitly stated \emph{author} does not raise a constraint violation, 
+%as the axiom allows you to entail that there must be an (unknown) \emph{author}.
+%$\overline{\mathcal{C}_{CWA}}$ includes constraint types for which it does not make any difference if the CWA/UNA or the OWA/nUNA is assumed.
+ %Nothing can be a \emph{book} and a \emph{journal article}  at the same time (\ms{Book $\sqcap$ JournalArticle $\sqsubseteq$ $\perp$}).
+%For this {\em disjoint classes} constraint, it does not make any difference if the CWA/UNA or the OWA/nUNA semantics is taken,
+%as all information needed for validation is explicitly available in both cases. 
+We classify constraint types according to the dependency on the CWA and the UNA which leads to not disjoint sets of constraint types:
 
-The distinction of constraint types regarding the dependency on the CWA with the UNA is an important aspect when combining reasoning with validation;
- OWL 2 reasoning requires the OWA without the UNA  whereas RDF validation is classically based on the UNA (different names represent different objects) and
-the CWA.
-We classify constraint types according to the dependency on the CWA with UNA; (1) $\mathcal{C}_{CWA}$ which is  the set of constraint types dependent on the CWA with UNA,  and (2) $\overline{\mathcal{C}_{CWA}}$, its complement (set of constraint types independent on the CWA with UNA).  Therefore, $\mathcal{C}_{CWA}$ includes constraint types for which it makes a difference if the CWA/UNA or the OWA/nUNA is assumed.
-If something is a \emph{publication}, e.g., it has at least one \emph{author} (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}).
-This {\em qualified cardinality restriction} depends on the CWA/UNA.
-In a CWA/UNA setting, a \emph{publication} without an explicitly stated author violates this constraint.  
-With OWA/nUNA semantics, however,
-the \emph{publication} without an explicitly stated \emph{author} does not raise a constraint violation, 
-as the axiom allows you to entail that there must be an (unknown) \emph{author}.
+(1) $\mathcal{CT}_{CWA}$ denotes the set of constraint types which are dependent on the \emph{CWA},
+	i.e., the set of constraint types for which it makes a difference if the CWA or the OWA is assumed.
+{\em Minimum qualified cardinality restrictions} (\emph{R-75}) is a $\mathcal{CT}_{CWA}$ constraint type, i.e., depends on the CWA.
+\emph{Publications}, e.g., must have at least one \emph{author} (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}).
+In a CWA setting, a \emph{publication} without an explicitly stated author violates the constraint, 
+whereas, with OWA semantics, 
+a \emph{publication} without an explicitly stated \emph{author} does not raise a constraint violation 
+as the axiom entails that there must be an \emph{author} which we may not know.
+(2) $\overline{\mathcal{CT}_{CWA}}$ is the complement of $\mathcal{CT}_{CWA}$ and thus includes constraint types which are independent on the \emph{CWA}.
+Nothing can be a \emph{book} and a \emph{journal article}  at the same time (\ms{Book $\sqcap$ JournalArticle $\sqsubseteq$ $\perp$}).
+For {\em disjoint classes} (\emph{R-7}), it does not make any difference if the CWA or the OWA is taken,
+as if there is a publication which is a book and a journal article a constraint violation is raised in both settings.
+%as all information needed for validation is explicitly available in both cases. 
 
-$\overline{\mathcal{C}_{CWA}}$ includes constraint types for which it does not make any difference if the CWA/UNA or the OWA/nUNA is assumed.
- Nothing can be a \emph{book} and a \emph{journal article}  at the same time (\ms{Book $\sqcap$ JournalArticle $\sqsubseteq$ $\perp$}).
-For this {\em disjoint classes} constraint, it does not make any difference if the CWA/UNA or the OWA/nUNA semantics is taken,
-as all information needed for validation is explicitly available in both cases. 
+%\begin{itemize}
+	%\item $\mathcal{CT}_{CWA}$ denotes the set of constraint types which are dependent on the \emph{CWA},
+	%i.e., the set of constraint types for which it makes a difference if the CWA or the OWA is assumed.
+	%\item $\mathcal{CT}_{OWA}$ denotes the set of constraint types which are dependent on the \emph{OWA} (complement of $\mathcal{C}_{CWA}$).
+	%\item $\mathcal{CT}_{UNA}$ denotes the set of constraint types which are dependent on the \emph{UNA}.
+	%\item $\mathcal{CT}_{nUNA}$ (complement of $\mathcal{C}_{UNA}$) denotes the set of constraint types which are dependent on the \emph{nUNA}
+%\end{itemize}
 
-For this work, following the similar fashion, we evaluated for each constraint type (74 in total) if it is dependent or independent on the CWA/UNA (for a detailed analysis see \cite{BoschNolleAcarEckert2015}). 
-The result of this evaluation is that we distinguish between 42 $\mathcal{C}_{CWA}$ constraint types and 32 $\overline{\mathcal{C}_{CWA}}$ constraint types.
-Hence, for the majority of constraint types it makes a difference if the CWA/UNA or the OWA/nUNA is assumed.
+(3) $\mathcal{CT}_{UNA}$ denotes the set of constraint types which are dependent on the \emph{UNA}.
+For \emph{Functional properties} (\emph{R-57/65}), it makes a difference if UNA or nUNA is assumed.
+The property \emph{title} is functional (\ms{funct (title)}), i.e., for each \emph{book}, there can be at most one distinct \emph{title}.
+UNA causes a clash,
+if the book {\em Huckleberry-Finn} has more than one title.
+%(\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}, \ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}).
+For nUNA, however, reasoning concludes that the title {\em The-Adventures-of-Huckleberry-Finn} is the same as the title {\em Die-Abenteuer-des-Huckleberry-Finn} 
+%(\ms{\{The-Adventures-of-Huckleberry-Finn\}} = \ms{\{Die-Abenteuer-des-Huckle} \ms{berry-}\ms{Finn\}}) 
+which resolves the constraint violation. 
+(4) $\mathcal{CT}_{nUNA}$ (complement of $\mathcal{CT}_{UNA}$) denotes the set of constraint types which are dependent on the \emph{nUNA}.
+
+-----
+
+For this work, following the similar fashion, we evaluated for each constraint type 
+if it is dependent or independent on the CWA and on the UNA (for a detailed analysis see \cite{BoschNolleAcarEckert2015}). 
+The result of this evaluation is that we distinguish between 42 $\mathcal{C}_{CWA}$ and 32 $\overline{\mathcal{C}_{CWA}}$ constraint types.
+Hence, for the majority of constraint types it makes a difference if the CWA or the OWA is assumed and if the UNA or the nUNA is assumed.
+\tb{ToDo: evaluation}
 
 \subsection{Reasoning}
 
